[package]
name = "robotssh"
authors = ["CordlessCoder <roman@vm.net.ua>"]
license = "MIT"
description = "A modern rewrite of autossh"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", default-features = false, features = [
  "derive",
  "color",
  "wrap_help",
  "std",
  "help",
  "error-context",
  "suggestions",
  "env",
  "cargo",
  "usage",
] }
clap_complete = "4.5.65"
color-eyre = { version = "0.6.5", default-features = false }
humantime = "2.3.0"
mio = { version = "1.1.1", features = [
  "net",
  "os-poll",
], default-features = false }
rand = { version = "0.9.2", default-features = false, features = [
  "thread_rng",
] }
shared_child = "1.1.1"
